# doip-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: DOIPMessage.cpp  DOIPMessage.h  client.cpp
